[metadata]
url = https://github.com/niflows/niflow-poldracklab-reconall
author = Christopher J. Markiewicz
author_email = markiewicz@stanford.edu
description = niflow-poldracklab-reconall workflow package
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
# Place any Python dependencies here
install_requires =
# Uncomment the following line if your package should distribute any non-Python files
# include_package_data = True

[options.entry_points]
console_scripts =
    niflow-poldracklab-reconall = niflow.poldracklab.reconall.cli:main

## If your workflow requires data to run, uncomment and update the following section:
# [options.package_data]
# niflow-poldracklab-reconall =
#     niflow/poldracklab/reconall/data/*

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = niflow/poldracklab/reconall/_version.py
versionfile_build = niflow/poldracklab/reconall/_version.py
tag_prefix =
parentdir_prefix =
